# Sales-System-Desktop-Application-C-Qt-

project/ReceiverUDP/: CMakeLists.txt  main.cpp  receiverwindow.cpp  receiverwindow.h  udpreceiver.cpp  udpreceiver.h
project/StoreApp/: CMakeLists.txt  books.cpp  books.h  customer.cpp  customer.h  customerlist.cpp  customerlist.h  customernamewindow.cpp  customernamewindow.h  item.cpp  item.h  magazines.cpp  magazines.h  main.cpp  mainwindow.cpp  mainwindow.h  secondwindow.cpp  secondwindow.h  store.cpp  store.h  transaction.cpp  transaction.h  transactionlist.cpp  transactionlist.h  transactionmainwindow.cpp  transactionmainwindow.h  udpsenderthread.cpp  udpsenderthread.h  xmldisplaywindow.cpp  xmldisplaywindow.h
